force-app/main/default/objects/Samples__c/Samples__c.object-meta.xml
<CustomObject>
    <label>Samples</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Sample Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>