force-app/main/default/objects/Samples__c/fields/Shipping_date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_date__c</fullName>
    <label>Shipping date</label>
    <type>Date</type>
</CustomField>