force-app/main/default/objects/Samples__c/validationRules/Samples_CChEN.validationRule-meta.xml
<ValidationRule>
    <fullName>Samples_CChEN</fullName>
    <active>true</active>
    <errorConditionFormula>Quote__r.Opportunity.Account.CChEN_Valido__c = FALSE</errorConditionFormula>
    <errorMessage>You cannot send samples to a customer without updated CChEN documentation</errorMessage>
</ValidationRule>